src/main/java/com/example/demo/common/error/exception/CustomNotFoundException.java
package com.example.demo.common.error.exception;

public class CustomNotFoundException extends RuntimeException {
    public CustomNotFoundException(String message) {
        super(message);
    }
}
